--- a/demo/zakzak.config.json
+++ b/demo/zakzak.config.json
@@ -1,19 +1,23 @@
 {
   "benchmark": {
     "minTime": 50000,
-    "minSamples": 5,
     "maxTime": 5000000,
+    "minSamples": 5,
     "maxSamples": 5000,
     "minIterations": 0,
     "maxIterations": 0,
     "memoryBenchmark": true,
+    "minMemorySamples": 10,
     "maxMemorySamples": 100,
-    "minMemorySamples": 10
+    "cpuProfiling": true,
+    "minCpuProfilingIterations": 10000,
+    "maxCpuProfilingIterations": 10000,
+    "samplingInterval": 1
   },
   "manager": {
     "runParallel": 1,
     "pattern": "./**/*.benchmark.js",
     "path": "./dist",
-    "exporter": ["hierarchy"]
+    "exporter": ["hierarchy", "d3-flamegraph"]
   }
 }
