--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^12.11.2",
     "@types/sinon": "^7.0.13",
     "@types/table": "^4.0.7",
+    "@types/terminal-kit": "^1.28.0",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "chai": "^4.2.0",
@@ -59,14 +60,10 @@
     "rimraf": "^3.0.0",
     "sinon": "^7.4.2",
     "source-map-support": "^0.5.13",
-    "tscpaths": "0.0.9",
-    "typescript": "^3.6.4",
-    "@types/terminal-kit": "^1.28.0"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
     "commander": "^3.0.0",
-    "csv-writer": "^1.5.0",
     "es6-promise-pool": "^2.5.0",
     "figlet": "^1.2.3",
     "globby": "^10.0.1",
