Implement suite breaking in console exporter (#44)
* implement suite breaking in exporter
* fix error in ascii art header
* fix error printing
* update zakzak in demo
* bump version to 0.6.0

--- a/demo/zakzak.config.json
+++ b/demo/zakzak.config.json
@@ -18,6 +18,6 @@
     "runParallel": 1,
     "pattern": "./**/*.benchmark.js",
     "path": "./dist",
-    "exporter": ["hierarchy", "d3-flamegraph"]
+    "exporter": ["console"]
   }
 }
